PLT-602- fix overlapped filter

--- a/src/sharedComponents/dataTableWidget/DataTableWidget.scss
+++ b/src/sharedComponents/dataTableWidget/DataTableWidget.scss
@@ -5,8 +5,6 @@
     &-wrapper {
         @extend .box-shadow-sm;
 
-        min-height: 37.5rem;
-
         .button-group-wrapper {
             ul {
                 margin: 0;
